# quantum-resistant-voting-system

./: App.jsx  Cargo.toml  README.md  app.js  dfx.json  index.html  lib.rs  main.jsx  package-lock.json  package.json  script.js  server.js  style.css  tsconfig.json  user.js
HACK_BECAUSE_OF_ALLOW_JS/Quantum-Resistant-Voting-frontend/: postcss.config.cjs  tailwind.config.js  vite.config.js
HACK_BECAUSE_OF_ALLOW_JS/Quantum-Resistant-Voting-frontend/src/: App.js  auth.js  main.js
Quantum-resistant-voting-system/: package-lock.json  package.json  quantumEncryption.js  server.js
Quantum-resistant-voting-system/models/: User.js  Vote.js
src/Quantum-Resistant-Voting-backend/: Cargo.toml  Quantum-Resistant-Voting-backend.did
src/Quantum-Resistant-Voting-backend/src/: lib.rs  vote.rs
src/Quantum-Resistant-Voting-frontend/: package.json  vite.config.js
src/Quantum-Resistant-Voting-frontend/src/: App.jsx  auth.js
